# box-socket

./: .gitignore  .hlint.yaml  ChangeLog.md  box-socket.cabal  cabal.project  hie.yaml  readme.md  readme.org  stack.yaml
.github/workflows/: haskell-ci.yml
app/: box-socket.hs
src/Box/: Socket.hs  TCP.hs  Types.hs  Websocket.hs
src/Box/Socket/: Example.hs  Types.hs
src/Box/TCP/: Example.hs
src/Box/Websocket/: Example.hs
test/: doctests.hs  test.hs
