cabal-version: 2.4
name:          box-socket
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/box-socket#readme
bug-reports: https://github.com/tonyday567/box-socket/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/box-socket

library
  exposed-modules:
    Box.Socket
  hs-source-dirs:
    src
  build-depends:
    base >= 4.12 && <5,
    aeson >= 1.4.5 && < 1.5,
    attoparsec >= 0.13.2 && < 0.14,
    box >= 0.5,
    concurrency >= 1.11,
    exceptions >= 0.10,
    generic-lens >= 1.1.0 && < 3.0,
    interpolatedstring-perl6 >= 1.0.2 && < 1.1,
    lens >= 4.17.1 && < 4.20,
    lucid >= 2.9 && < 2.10,
    mtl >= 2.2.2 && < 2.3,
    numhask-prelude >= 0.6,
    scotty >= 0.11.5 && < 0.12,
    text >= 1.2.3 && < 1.3,
    transformers >= 0.5.6 && < 0.6,
    unordered-containers >= 0.2.10 && < 0.3,
    wai-middleware-static >= 0.8.2 && < 0.9,
    websockets >= 0.12,
    web-rep,
    wai,
    wai-websockets,
    wai-transformers,
    warp,
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

executable box-socket
  main-is: box-socket.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.7 && < 5,
    box,
    box-socket,
    concurrency >= 1.11,
    exceptions >= 0.10,
    generic-lens >= 2.0,
    interpolatedstring-perl6 >= 1.0.2 && < 1.1,
    lens >= 4.19,
    lucid >= 2.9,
    numhask-prelude >= 0.6,
    optparse-generic >= 1.3,
    scotty >= 0.11.5 && < 0.12,
    text >= 1.2.3 && < 1.3,
    websockets >= 0.12,
    web-rep,
    wai,
    wai-websockets,
    wai-transformers,
    warp,
    streaming,
    aeson,
    attoparsec >= 0.13,
    unordered-containers >= 0.2,
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    box-socket,
    doctest >= 0.16,
    numhask-prelude >= 0.6,
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
