cabal-version: 2.4
name:          box-socket
version:       0.2.0
synopsis:      Box websockets
description:   Websockets built with the box library.
category:      project
author:        Tony Day
maintainer:    tonyday567@gmail.com
copyright:     Tony Day (c) AfterTimes
license:       BSD-3-Clause
homepage:      https://github.com/tonyday567/box-socket#readme
bug-reports:   https://github.com/tonyday567/box-socket/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/tonyday567/box-socket

library
  exposed-modules:
    Box.Socket
    Box.TCP

  hs-source-dirs:   src
  build-depends:
    , async           ^>=2.2.3
    , base            >=4.12    && <5
    , box             ^>=0.7
    , bytestring      ^>=0.10
    , concurrency     ^>=1.11
    , exceptions      ^>=0.10
    , generic-lens    ^>=2.2
    , lens            ^>=5.0
    , network         ^>=3.1
    , network-simple  ^>=0.4
    , text            ^>=1.2.4.1
    , websockets      ^>=0.12

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
    -hiedir=.hie -Wunused-packages

executable box-socket
  main-is:          box-socket.hs
  hs-source-dirs:   app
  build-depends:
    , base              >=4.7     && <5
    , box               ^>=0.7
    , box-socket
    , concurrency       ^>=1.11
    , generic-lens      ^>=2.2
    , lens              ^>=5.0
    , optparse-generic  ^>=1.3
    , text              ^>=1.2.4.1

  default-language: Haskell2010
  ghc-options:
    -funbox-strict-fields -fforce-recomp -threaded -rtsopts
    -with-rtsopts=-N -fwrite-ide-info -hiedir=.hie -Wunused-packages
